--- a/package.json
+++ b/package.json
@@ -1,25 +1,56 @@
 {
-  "name": "cross-sell-component",
+  "name": "@zeilsell-user1/cross-sell-component",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/zeilsell-user1"
+  },
   "version": "0.0.1",
   "description": "This is a small next library that adds a crossell component",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Richard George",
   "license": "MIT",
   "private": false,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
+  },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.2.0",
     "@rollup/plugin-typescript": "^10.0.1",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/builder-webpack4": "^6.5.14",
+    "@storybook/manager-webpack4": "^6.5.14",
+    "@storybook/react": "^6.5.14",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
+    "@types/styled-components": "^5.1.26",
+    "babel-loader": "^8.3.0",
     "install-peers": "^1.0.4",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^3.7.5",
     "rollup-plugin-dts": "^5.0.0",
+    "storybook": "^6.5.14",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
@@ -29,5 +60,7 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {}
+  "peerDependencies": {
+    "webpack": "^5.75.0"
+  }
 }
