--- a/package.json
+++ b/package.json
@@ -1,66 +1,79 @@
 {
   "name": "@zeilsell-user1/cross-sell-component",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/zeilsell-user1"
-  },
-  "version": "0.0.5",
-  "description": "This is a small next library that adds a crossell component",
-  "scripts": {
-    "rollup": "rollup -c",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "author": "Richard George",
+  "type": "module",
+  "version": "0.1.0",
+  "description": "This is a simple scross sell component to be used with react/next apps",
+  "author": "Richard George <richard.john.george.3@gmail.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.2.0",
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-interactions": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/builder-webpack4": "^6.5.14",
-    "@storybook/manager-webpack4": "^6.5.14",
-    "@storybook/react": "^6.5.14",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.4",
-    "@types/react": "^18.0.26",
-    "@types/styled-components": "^5.1.26",
-    "babel-loader": "^8.3.0",
-    "install-peers": "^1.0.4",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "rollup": "^3.7.5",
-    "rollup-plugin-dts": "^5.0.0",
-    "storybook": "^6.5.14",
-    "ts-jest": "^29.0.3",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
-  },
-  "main": "index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
   "types": "dist/index.d.ts",
+  "repository": "https://github.com/zeilsell-user1/cross-sell-component.git",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "scripts": {
+    "compile": "tsc --project tsconfig.json",
+    "compile:clean": "tsc --build --clean",
+    "lint": "eslint . --ext=.jsx,.js,.tsx,.ts",
+    "lint:fix": "eslint . --ext=.jsx,.js,.tsx,.ts  --fix",
+    "lint:css": "stylelint src/cross-sell-tile/styles.css",
+    "pretty": "prettier --write .",
+    "ladle": "ladle serve",
+    "rollup": "rollup -c rollup.config.mjs",
+    "rollup:watch": "rollup -cw",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@ladle/react": "^2.4.5",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
+    "@types/react": "^18.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.31.0",
+    "eslint-plugin-deprecation": "^1.3.3",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-eslint-plugin": "^5.0.8",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "install-peers": "^1.0.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "rollup": "^3.9.1",
+    "rollup-plugin-banner2": "^1.2.2",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard": "^30.0.1",
+    "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "typescript-eslint": "^0.0.1-alpha.0"
+  },
   "peerDependencies": {
-    "webpack": "^5.75.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
